[package]
name = "iron_dice"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/katekorsaro/iron-dice"
license = "MIT"
keywords = ["rpg","dice","random"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
