[package]
name = "iron_dice"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/katekorsaro/iron-dice"
license = "MIT"
keywords = ["rpg","dice","random"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"
